fixed some spacing issues.

--- a/style.css
+++ b/style.css
@@ -17,108 +17,120 @@
 
 body {
 	background: fixed center center;
-    background-image: url("img/image.png");
-    background-color: #cccccc;
-    background-size: cover;
-    font-family: 'HarrisFont';
+  background-image: url("img/image.png");
+  background-color: #cccccc;
+  background-size: cover;
+  font-family: 'HarrisFont';
 }
+
 #line{
   left:0%;
   height: 2px;
-  width:35px;
+  width:25px;
   background-color: #00ffcc;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%); 
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 .logo{
   left: 2%;
   max-width: 50px;
   position: absolute;
   top: 50%;
+  -ms-transform: translateY(-50%); 
+  -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-div{
+/*div{
   position: absolute;
   top: 50%;
   left: 50%;
+  margin: 0 auto;
+  -ms-transform: translateY(-50%, -50%);
+  -webkit-transform: translateY(-50%);
   transform: translate(-50%, -50%);
-}
+}*/
 
 p {
-    text-decoration: none;
-    color: white;
-    font-size: 5.5vw;
-    text-align: center;
-    font-family: 'HarrisFont';
-    letter-spacing: -.05em;
-    word-spacing: -.2em;
+  text-decoration: none;
+  color: white;
+  font-size: 5.5vw;
+  text-align: center;
+  font-family: 'HarrisFont';
+  letter-spacing: -.05em;
+  word-spacing: -.2em;
 }
 
+/*ICONS*/
 .socmed{
   left:95%;
   max-height: 300px;
   width:30px;
   padding-right: 20px;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%); 
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
-/*.sm{
-  max-width: 20px;
-  padding: 10px;
-}
-
-.sm:hover{
- background: white;
-}*/
-
 
 .sm
 {
   max-width: 20px;
   padding: 10px;
-
-border-radius: 0px;
-transition: border-radius 1s, background 1.5s;
-
+  border-radius: 0px;
+  transition: border-radius 1s, background 1.5s;
 }
 
 .sm:hover
 {
   transition: border-radius 1s, background 1.5s;
-border-radius:40px;
-background: white;
+  border-radius:40px;
+  background: white;
+  /*background-opacity: .7;*/
 }
 
 
 /* LEFT TO RIGHT AND SKEW*/
 p a {
-text-decoration: none;
-color: white;
-font-size: 5.5vw;
-text-align: center;
-font-family: 'HarrisFont';
-letter-spacing: -.05em;
-word-spacing: -.2em;
-display: inline-block;
--ms-transition: -ms-transform 0.5s;
--webkit-transition: -webkit-transform 0.5s;
-transition: transform 0.5s;
+  text-decoration: none;
+  color: white;
+  font-size: 5.5vw;
+  text-align: center;
+  font-family: 'HarrisFont';
+  letter-spacing: -.05em;
+  word-spacing: -.2em;
+  display: inline-block;
+  -ms-transition: -ms-transform 0.5s;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
 }
+
 p a:after {
-content: '';
-display: block;
-height: 2px;
-width: 0;
-background: transparent;
-transition: width 1s ease, background-color 1s ease;
-
+  content: '';
+  display: block;
+  height: 2px;
+  width: 0;
+  background: transparent;
+  transition: width 1s ease, background-color 1s ease;
 }
+
 p a:hover:after {
-width: 100%;
-background: #00ffcc;
+  width: 100%;
+  background: #00ffcc;
 }
+
 p a:hover{
-color: #00ffcc;
-    -ms-transform: skewX(-10deg); /* IE 9 */
-    -webkit-transform: skewX(-10deg); /* Safari */
-    transform: skewX(-10deg);
-
+  color: #00ffcc;
+  -ms-transform: skewX(-10deg); /* IE 9 */
+  -webkit-transform: skewX(-10deg); /* Safari */
+  transform: skewX(-10deg);
 }
 
-
+@media only screen and (max-device-width:600px){
+  p, p a{
+    font-size: 9vw;
+  }
+}
